
  * DistUpgrade/DistUpgradeController.py:
    - workaround kde tmpfile permissions (LP: #277431)
  * UpdateManager/Common/utils.py:
    - do not crash if gconfd is not availabe/unusable 
      (LP: #281248)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - do not use "kde" frontend during the upgrade, it
      crashes because of the kde3->kde4 transition
      if run at the wrong time (LP: #283942)

 --

update-manager (1:0.93.25) intrepid; urgency=low

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeQuirks.py:
    - Fix crash from not having gettext imported
  
  [ Michael Vogt ]
  * revert the fglrx->ati transition (LP: #247376)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Oct 2008 10:03:04 +0200

update-manager (1:0.93.24) intrepid; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - disable the apt.cron.daily script during the upgrade
      (LP: #277079)
  * DistUpgrade/DistUpgradeAptCdrom.py:
    - work around the problem that the hardy "apt-cdrom add" will
      fail when no uncompressed Packages files are on the CD
      (LP: 276349)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 14 Oct 2008 16:30:41 +0200

update-manager (1:0.93.23) intrepid; urgency=low

  * DistUpgrade/xorg_fix_intrepid.py:
    - comment out input devices from xorg.conf (handled via 
      hal now). Thanks to Alberto Milone for his help, 
      LP: #247608

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 13 Oct 2008 20:35:06 +0200

update-manager (1:0.93.22) intrepid; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - add rule to force kdelibs5-dev upgrade (LP: #279621),
      thanks to ScottK
  * DistUpgrade/DistUpgradeViewGtk.py:
    - do not hang if a script fails to run (LP: #280236)
  * DistUpgrade/DistUpgradeController.py:
    - do not run post-upgrade quirks handler in partial upgrade
      mode because they only apply to real release upgrades

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Oct 2008 16:51:36 +0200
